fix: center align Modal

--- a/css/gameRules.css
+++ b/css/gameRules.css
@@ -24,6 +24,9 @@
 
 
 .modal{
+    display: flex;
+    justify-content: center;
+    align-content: center;
     position: fixed;
     top: 0;
     width: 100vw;
@@ -45,7 +48,6 @@
     justify-content: center;
     align-items: center;
     align-self: center;
-    margin: 5vh 20vw;
     width: 50vw;
     height: auto;
     padding: 30px;
